[gd_scene load_steps=2 format=3 uid="uid://day_unit_entity"]

[ext_resource type="Script" path="res://scripts/day_unit/day_unit_controller.gd" id="1"]

[node name="DayUnitEntity" type="Node2D"]
script = ExtResource("1")

[node name="Shadow" type="Sprite2D" parent="."]
position = Vector2(0, 12)
modulate = Color(0, 0, 0, 0.2)
scale = Vector2(0.3, 0.15)

[node name="BodySprite" type="Sprite2D" parent="."]
scale = Vector2(0.5, 0.5)

[node name="ShoesSprite" type="Sprite2D" parent="."]
visible = false
position = Vector2(0, 20)
scale = Vector2(0.3, 0.3)

[node name="GlovesSprite" type="Sprite2D" parent="."]
visible = false
position = Vector2(0, 5)
scale = Vector2(0.3, 0.3)

[node name="ChestSprite" type="Sprite2D" parent="."]
visible = false
position = Vector2(0, -5)
scale = Vector2(0.3, 0.3)

[node name="HelmSprite" type="Sprite2D" parent="."]
visible = false
position = Vector2(0, -20)
scale = Vector2(0.3, 0.3)

[node name="Accent0" type="Sprite2D" parent="."]
visible = false
position = Vector2(-15, 0)

[node name="Accent1" type="Sprite2D" parent="."]
visible = false
position = Vector2(15, 0)

[node name="Accent2" type="Sprite2D" parent="."]
visible = false
position = Vector2(0, 10)

[node name="ThoughtAnchor" type="Marker2D" parent="."]
position = Vector2(0, -40)
